2011-11-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (delete_override_omp): Call get_report instead of getting
	the report by hand.  This means the delta case is now handled properly.

	* src/html/omp.xsl (override-detailed): Send delta params in delta case.

2011-11-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (edit_note_omp): Add delta params.
	(save_note_omp): Call get_report instead of getting the report by hand.
	This means the delta case is now handled properly.

	* src/html/omp.xsl (html-edit-note-form): Add delta params to save_note
	form.
	(note-detailed): Add delta params to edit_note link.

2011-11-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_report): New function.  Body from get_report_omp.
	Add commands arg for extra commands.
	(get_report_omp): Call through to get_report.
	(delete_note_omp): Call get_report instead of getting the report by hand.
	This means the delta case is now handled properly.

2011-11-25  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (note-detailed): Send delta params in delta case.

2011-11-24  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (save_note_omp): Add missing days init.

	* src/html/omp.xsl (html-edit-note-form): Correct tag name.
	(note [details]): When note is off put "when Active" in heading.
	(result-detailed): Only show active notes.

2011-11-23  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_result): Set both overrides OMP flags from the
	URL param, so that overrides only show when "apply overrides" is chosen.

2011-11-23  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (create_note_omp, save_note_omp): Pass active state
	through.

	* src/html/omp.xsl (html-report-table, note, html-notes-table): Add active
	column.
	(html-create-note-form, html-edit-note-form): Add active field.
	(note [details]): Add active field.